--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -56,7 +56,7 @@
                <button class="header__search-icon ">
                    <span class="img"> <img src="./../img/search.svg" alt=""></span>
                </button>
-               <button class="section__button primary">Online Campus</button>
+               <a href="" class="section__button primary">Online Campus</a>
                <div class="header__burger"><span></span><span></span></div>
 
            </div>
@@ -67,12 +67,12 @@
     <div class="modal__wrap">
         <div class="modal__content ">
             <div class="modal__close img">
-                <img src="./../img/x.svg" alt="">
+                <img src="./../img/clear.svg" alt="">
             </div>
             <div class="modal__overflow">
                 <div class="modal__block">
-                    <h3 class="section__title">Дякуємо!</h3>
-                    <p class="section__title">Ми звяжемся з нами.</p>
+                    <h3 class="modal__title">Danke! </h3>
+                    <p class="modal__text">Wir werden Sie kontaktieren</p>
                 </div>
             </div>
         </div>
