--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,3 @@
-
 .wrap {
   font-family: var(--GT);
   max-width: 100vw;
@@ -118,6 +117,12 @@
       clip-path: ellipse(55% 85% at 50% 0%);
       background-color: var(--color-primary);
     }
+    &.grey{
+      background-color: var(--color-grey);
+      &:after{
+        background-color: var(--color-grey);
+      }
+    }
 
     .container{
       padding: 10rem 3rem 1rem;
@@ -168,6 +173,9 @@
     gap:8rem;
     & > *{
       width: calc(50% - 4rem);
+    }
+    &-title{
+      font: 700 5.6rem / 5.6rem var(--GT) ;
     }
     background-color: var(--color-grey);
     //&.grey{
@@ -358,7 +366,9 @@
     width: max-content;
     letter-spacing: -0.06rem;
   }
-
+  &__middle{
+    font: 700 5.6rem / 5.6rem var(--GT) ;
+  }
 
 
   //&__subtitle{
@@ -1531,7 +1541,13 @@
 
     }
   }
-
+  &__form{
+    &-bottom{
+      .container{
+        padding: 0 3rem 16rem;
+      }
+    }
+  }
 }
 
 .contact{
@@ -1710,7 +1726,118 @@
       text-decoration: underline;
     }
   }
+  &__flex{
+    display: flex;
+    gap:1.6rem;
+    align-items: center;
+    flex-wrap:wrap;
+    & > *{
+      width: calc(50% - 0.8rem);
+    }
+  }
+  &__button{
+    display: flex;
+    gap:1.2rem;
+    button{
+      width: 100%;
+      justify-content: space-between;
+      display: flex;
+      align-items: center;
+      padding: 1.6rem 1.6rem 1.6rem 2.4rem;
+      .price{
+        padding: 0.8rem 1.6rem;
+        background: #0029190F;
+        border-radius:10rem ;
+        font-weight: 400;
+      }
+    }
+    &-counter{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap:0.4rem;
+      padding: 2rem 1.2rem;
+      border-radius: 100rem;
+      background-color: white;
+      &:after{
+        content: '';
+        position: absolute;
+        top: 0;
+        width: 100%;
+        left: 0;
+        height: 100%;
+        border:0.2rem solid #E6E9E4;
+        pointer-events: none;
+      }
+      span{
+        font: 400 2.4rem / 2.4rem var(--GT);
+        min-width: 48px;
+        text-align: center;
+      }
+    }
+    &-count{
+      position: relative;
+      width: 3.2rem;
+      height: 3.2rem;
+      &:after{
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 50%;
 
+        width: 1.4rem;
+        height: 1.4rem;
+        background: url("../img/arr.svg") center/1.4rem 1.4rem no-repeat;
+      }
+      &-plus:after{
+        transform: translate(-50%,-50%);
+      }
+      &-minus:after{
+        transform: translate(-50%,-50%) rotate(-180deg);
+      }
+    }
+  }
+
+}
+
+
+.tab{
+  &__header {
+    display: flex;
+    align-items: center;
+    gap:0.8rem;
+    padding: 0.8rem;
+    border-radius: 10rem;
+    background-color: var(--color-grey);
+
+    &-item {
+      font: 400 2rem / 2.6rem var(--GT);
+      position: relative;
+      padding: 1rem 1.6rem;
+      border-radius: 100rem;
+      &.active {
+        color: var(--color-white);
+        background: var(--color-primary);
+      }
+    }
+  }
+  &__content-item {
+    display: none;
+    &:first-child {
+      display: block;
+    }
+  }
+
+}
+
+
+.alternative{
+  .container{
+    padding: 5.6rem 3rem 8rem;
+  }
+  .section__button{
+    margin-top:4rem ;
+  }
 }
 
 
@@ -1800,6 +1927,106 @@
     display: flex;
     gap:1.2rem;
     align-items: center;
+  }
+}
+
+.registration{
+    gap:2.4rem;
+  .section__button{
+    p{
+      font: 500 2.4rem / 2.4rem var(--GT);
+    }
+  }
+  .form__seminar{
+    width: 68%;
+  }
+  &__list{
+    margin-top: 4rem;
+    display: flex;
+    gap:2.4rem;
+    flex-direction: column;
+  }
+  &__item{
+    display: flex;
+    gap:0.4rem;
+    flex-direction: column;
+    &-title{
+      font: 400 1.2rem / 1.3rem var(--GT);
+      letter-spacing: 0.06em;
+      text-transform: uppercase;
+    }
+    &-text{
+      font: 700 2rem / 2.4rem var(--GT);
+      color:var(--color-primary)
+    }
+  }
+  &__flex{
+    display: flex;
+    & > *{
+      min-width: max-content;
+      max-width: 14.5rem;
+      width: 100%;
+    }
+    .registration__item-title{
+      margin-bottom: 1.6rem;
+    }
+    .registration__item{
+      &:first-child{
+        .registration__item-text{
+          position: relative;
+          &:after{
+            content:'';
+            position: absolute;
+            bottom: -0.6rem;
+            left: 0;
+            width: 200%;
+            height: 0.1rem;
+            background-color: #0029193D;
+          }
+        }
+      }
+    }
+    .registration__item-text{
+      margin-bottom: 1.2rem;
+      &.disabled{
+        color:#0029193D;
+
+      }
+      &:last-child{
+        margin-bottom: 0.8rem;
+      }
+    }
+  }
+}
+
+.review{
+  .container{
+    padding: 5.6rem 3rem;
+  }
+  &__item{
+    display: flex;
+    flex-direction: column;
+    gap:2rem;
+  }
+  .card__star{
+    padding: 0;
+    gap:0.4rem;
+  }
+  &__author{
+    font: 400 2rem / 2.6rem var(--GT);
+  }
+  &__nav{
+    display: flex;
+    margin-top: 4rem;
+  }
+  .card__star-item{
+    width: 2.4rem;
+    height: 2.4rem;
+  }
+  .card__star-item:after{
+    width: 2.4rem;
+    height: 2.4rem;
+    background: url(../img/star-little.svg) center / 2.4rem 2.4rem no-repeat;
   }
 }
 
