--- a/BACK/themes/twentytwentyone/assets/css/ie.css
+++ b/BACK/themes/twentytwentyone/assets/css/ie.css
@@ -22,7 +22,7 @@ Twenty Twenty-One is distributed under the terms of the GNU GPL.
 /**
  * SETTINGS
  * File-header..........The file header for the themes style.css file.
- * Fonts................Any font files, if the project needs specific fonts.
+ * Fonts................Any font files, if the project needs specific font.
  * Global...............Project-specific, globally available variables.
  *
  * TOOLS
