--- a/BACK/themes/twentytwentyone/assets/sass/style.scss
+++ b/BACK/themes/twentytwentyone/assets/sass/style.scss
@@ -3,7 +3,7 @@
 /**
  * SETTINGS
  * File-header..........The file header for the themes style.css file.
- * Fonts................Any font files, if the project needs specific fonts.
+ * Fonts................Any font files, if the project needs specific font.
  * Global...............Project-specific, globally available variables.
  *
  * TOOLS
