--- a/BACK/themes/twentytwentyone/assets/sass/05-blocks/blocks-editor.scss
+++ b/BACK/themes/twentytwentyone/assets/sass/05-blocks/blocks-editor.scss
@@ -1,5 +1,5 @@
 // Block Styles for the Editor
-// - These styles replace key Gutenberg Block styles for fonts, colors, and
+// - These styles replace key Gutenberg Block styles for font, colors, and
 //   spacing with CSS-variables overrides in the Block Editor
 // - In the future the Block styles may get compiled to individual .css
 //   files and conditionally loaded
