--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,6 +31,26 @@
 }
 
 .section{
+  &__editor{
+    .container{
+      position: relative;
+      &:before{
+        content: '';
+        position: absolute;
+        bottom: -8rem;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 51.6rem;
+        height: 21.3rem;
+        background: url("../img/pear-section.svg") center/51.6rem 21.3rem no-repeat;
+        z-index: 1;
+      }
+    }
+
+    .section__title{
+      text-align: center;
+    }
+  }
   &__more{
     &-btn{
       font: 400 1.6rem / 1.9rem var(--GT) ;
@@ -1830,7 +1850,75 @@
 
 }
 
+.editor{
+  .container{
+    padding: 13.6rem 3rem;
+  }
+  &__list{
+    display: flex;
+    flex-direction: column;
+    gap:12.1rem
+  }
+  &__item{
+    display: flex;
+    gap:2.4rem;
+    position: relative;
+    & > *{
+      width: calc(50% - 1.2rem);
+    }
+    &:not(:last-child):after{
+      content: '';
+      position: absolute;
+      bottom: -6rem;
+      width: 100%;
+      height: 0.1rem;
+      background: #E0E5E3;
 
+    }
+  }
+  &__content{
+    display: flex;
+    flex-direction: column;
+    gap:2rem;
+    p, p > *, span, li, a {
+      font: 400 2rem/2.8rem var(--GT);
+    }
+    ol, ul{
+      padding-left: 1.6rem;
+      display: flex;
+      flex-direction: column;
+      gap:1rem;
+    }
+    ul{
+      padding-left: 2.4rem;
+      li{
+        position: relative;
+        &:after{
+          content: '';
+          position: absolute;
+          top: 0.4rem;
+          left: -2.4rem;
+          width: 1.2rem;
+          height: 1.2rem;
+          border: 0.2rem solid var(--color-primary);
+          border-radius: 50%;
+        }
+      }
+    }
+    strong{
+      font-weight: 700;
+    }
+    h2, h3, h4, h5, h6{
+      font: 500 2.8rem / 3.6rem var(--GT);
+      text-transform: capitalize;
+      letter-spacing: -0.01em;
+    }
+  }
+  &__title{
+    font: 500 4rem / 4.4rem var(--GT);
+    letter-spacing: -0.01em;
+  }
+}
 .alternative{
   .container{
     padding: 5.6rem 3rem 8rem;
@@ -2763,5 +2851,28 @@ label.error{
   }
   .campus .container{
     padding-top: 4.8rem;
+  }
+  .editor .container{
+    padding: 5.6rem 2rem 8rem;
+  }
+  .editor__item{
+    flex-direction: column;
+    & > *{
+      width: 100%;
+    }
+  }
+  .editor__list{
+    gap:8.1rem;
+  }
+  .editor__item:not(:last-child):after{
+    bottom:-4rem;
+  }
+  .editor__title{
+    font-size: 3.2rem ;
+    line-height: 3.8rem;
+  }
+  .editor__content h2, .editor__content h3, .editor__content h4, .editor__content h5, .editor__content h6{
+    font-size: 2.2rem;
+    line-height: 2.6rem;
   }
 }
