--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -9,10 +9,10 @@
 /* Base
    ========================================================================== */
 /**
- * 1. Set default fonts family to sans-serif.
+ * 1. Set default font family to sans-serif.
  * 2. Prevent iOS and IE text size adjust after device orientation change,
  *    without disabling user zoom.
- * 3. Corrects text resizing oddly in IE 6/7 when body `fonts-size` is set using
+ * 3. Corrects text resizing oddly in IE 6/7 when body `font-size` is set using
  *  `em` units.
  */
 html {
@@ -129,7 +129,7 @@ dfn {
 }
 
 /**
- * Address variable `h1` fonts-size and margin within `section` and `article`
+ * Address variable `h1` font-size and margin within `section` and `article`
  * contexts in Firefox 4+, Safari, and Chrome.
  */
 h1 {
@@ -146,7 +146,7 @@ mark {
 }
 
 /**
- * Address inconsistent and variable fonts size in all browsers.
+ * Address inconsistent and variable font size in all browsers.
  */
 small {
   font-size: 80%;
@@ -213,8 +213,8 @@ pre {
 }
 
 /**
- * Address odd `em`-unit fonts size rendering in all browsers.
- * Correct fonts family set oddly in IE 6, Safari 4/5, and Chrome.
+ * Address odd `em`-unit font size rendering in all browsers.
+ * Correct font family set oddly in IE 6, Safari 4/5, and Chrome.
  */
 code,
 kbd,
@@ -233,7 +233,7 @@ samp {
 /**
  * 1. Correct color not being inherited.
  *  Known issue: affects color of disabled elements.
- * 2. Correct fonts properties not being inherited.
+ * 2. Correct font properties not being inherited.
  * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
  * 4. Improves appearance and consistency in all browsers.
  */
@@ -327,7 +327,7 @@ input[type="radio"] {
 
 /**
  * Fix the cursor style for Chrome's increment/decrement buttons. For certain
- * `fonts-size` values of the `input`, it causes the cursor style of the
+ * `font-size` values of the `input`, it causes the cursor style of the
  * decrement button to change from `default` to `text`.
  */
 input[type="number"]::-webkit-inner-spin-button,
@@ -386,7 +386,7 @@ textarea {
 }
 
 /**
- * Don't inherit the `fonts-weight` (applied by a rule above).
+ * Don't inherit the `font-weight` (applied by a rule above).
  * NOTE: the default cannot safely be changed in Chrome and Safari on OS X.
  */
 optgroup {
