--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,26 +31,10 @@
 }
 
 .section{
-  &__editor{
-    .container{
-      position: relative;
-      &:before{
-        content: '';
-        position: absolute;
-        bottom: -8rem;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 51.6rem;
-        height: 21.3rem;
-        background: url("../img/pear-section.svg") center/51.6rem 21.3rem no-repeat;
-        z-index: 1;
-      }
-    }
-
-    .section__title{
-      text-align: center;
-    }
+  &:last-of-type{
+    padding-bottom: 5.6rem;
   }
+
   &__more{
     &-btn{
       font: 400 1.6rem / 1.9rem var(--GT) ;
@@ -136,7 +120,7 @@
     &:after {
       content: '';
       position: absolute;
-      bottom: -8rem;
+      bottom: -7.9rem;
       height: 8rem;
       width: 100%;
       left: 50%;
@@ -161,8 +145,8 @@
         left: 50%;
         transform: translateX(-50%);
         width: 51.6rem;
-        height: 40.4rem;
-        background: url("../img/pear-section.svg") center/51.6rem 40.4rem no-repeat;
+        height: 42.8rem;
+        background: url("../img/pear-section.svg") center/51.6rem 42.8rem no-repeat;
         z-index: 1;
       }
 
@@ -174,6 +158,8 @@
       align-items: center;
       justify-content: center;
       text-align: center;
+      position: relative;
+      z-index: 2;
       .section__search{
         margin-top: 2.4rem;
         &-input{
@@ -203,7 +189,9 @@
         width: 50%;
         margin-bottom: 6rem;
         max-height: 43.2rem;
-        height: max-content;
+        height: 100%;
+        border-radius: 3.2rem;
+        overflow: hidden;
         img{
           border-radius: 3.2rem;
         }
@@ -233,6 +221,27 @@
       .section__banner-seminar-img{
         margin: 0;
       }
+    }
+  }
+  &__editor{
+    .container{
+      position: relative;
+      &:before{
+
+        content: '';
+        position: absolute;
+        bottom: -6.8rem;
+        left: 45%;
+        transform: translateX(-50%);
+        width: 51.6rem;
+        height: 21.3rem;
+        background: url("../img/pear-imp.svg") center/51.6rem 21.3rem no-repeat;
+        z-index: 1;
+      }
+    }
+
+    .section__title{
+      text-align: center;
     }
   }
   &__center{
@@ -748,6 +757,60 @@
 
 }
 
+.policy {
+  position: fixed;
+  bottom: 2rem;
+  left: 1.6rem;
+  background-color: #f8f9fa;
+  padding: 2.4rem;
+  border-radius: 1.6rem;
+  box-shadow: 0px 1px 2px 0px #023D2703;
+  box-shadow: 0px 2px 4px 0px #023D2705;
+  box-shadow: 0px 4px 8px 0px #023D2708;
+  box-shadow: 0px 6px 15px 0px #023D2708;
+  box-shadow: 0px 12px 26px 0px #023D270A;
+  box-shadow: 0px 27px 65px 0px #023D270D;
+  display: none;
+  z-index: 1000;
+  max-width: 52rem;
+  &__head{
+    display: flex;
+    align-items: center;
+    gap:1.2rem;
+    padding-right: 7rem;
+    &-icon{
+      width: 4rem;
+      min-width: 4rem;
+    }
+    p{
+      font: 700 3.2rem / 3.8rem var(--GT);
+    }
+  }
+  &__close{
+    position: absolute;
+    width: 4rem;
+    right: 2.4rem;
+    top: 2.4rem;
+  }
+
+  &__text{
+    font: 400 2rem / 2.4rem var(--GT);
+  }
+  &.show{
+    display: flex;
+    flex-direction: column;
+    gap:1.2rem;
+  }
+  &__button{
+    display: flex;
+    gap:0.8rem;
+    margin-top: 1.2rem;
+  }
+  .reject{
+    font: 500 2.4rem / 2.4rem var(--GT);
+    padding: 2.4rem 4rem;
+  }
+}
 
 
 .banner{
@@ -798,7 +861,7 @@
     }
   }
   &__info{
-    max-width: 67.8rem;
+    max-width: 50%;
   }
   .section__title{
     margin-bottom:23.6rem ;
@@ -806,7 +869,7 @@
   &__subtitle{
     color:white;
     font: 400 2.4rem / 3.4rem var(--GT) ;
-    max-width: 56rem;
+    max-width: 50rem;
   }
   &__button{
     display: flex;
@@ -818,7 +881,7 @@
     gap:2.4rem;
   }
   &__img{
-    width: 50%;
+    width: 49%;
     height: 100%;
     right: 0;
     top: 0;
@@ -887,7 +950,7 @@
   //position: relative;
   &__back{
     position: absolute;
-    bottom: 0;
+    bottom: -0.5rem;
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
@@ -924,6 +987,7 @@
   &__img{
     width: 45%;
     position: relative;
+    border-radius: 3.2rem;
     img{
       border-radius: 3.2rem;
     }
@@ -931,7 +995,7 @@
       content: '';
       position: absolute;
       bottom: -27px;
-      left:8%;
+      left:7%;
       width: 27rem;
       height:23rem;
       background: url(../img/promise-svg.svg) center/27rem 23rem no-repeat;
@@ -1392,6 +1456,7 @@
         width: 6rem;
         height: 6rem;
         min-width: 6rem;
+        border-radius: 50%;
         img{
           border-radius: 50%;
         }
@@ -1405,6 +1470,8 @@
   }
   .card__item{
     width: calc((100% - 4.8rem )/3);
+    top: 0!important; ;
+    transform: none!important;
   }
   .card__img{
     position: relative;
@@ -1746,6 +1813,8 @@
   &__map{
     width: 65%;
     & > *{
+      border-top-left-radius: 3.2rem;
+      border-top-right-radius: 3.2rem;
       width: 100%;
       height: 100%;
     }
@@ -2067,6 +2136,7 @@
       top: 0;
       left: 0;
       height: 100%;
+      border-radius: 1.6rem;
       img{
         border-radius: 1.6rem;
       }
@@ -2213,7 +2283,7 @@
   &__flex{
     display: flex;
     & > *{
-      min-width: max-content;
+      //width: max-content;
       max-width: 14.5rem;
       width: 100%;
     }
@@ -2638,6 +2708,7 @@ label.error{
   .banner__subtitle{
     font-size: 2rem;
     line-height: 2.8rem;
+
   }
   .banner__button{
     flex-direction: column;
@@ -3159,9 +3230,9 @@ label.error{
     width: 100%;
   }
   .section__banner.grey:after{
-    display: none;
+    //display: none;
   }
-  .editor .container{
+  .seminar__editor .container{
     padding: 3.2rem 2rem 4rem;
   }
   .alternative .section__top{
@@ -3197,5 +3268,46 @@ label.error{
     max-width: 100%;
     margin: 0;
     gap:0;
+  }
+  .policy{
+    left: 0.8rem;
+    bottom:0.8rem;
+    width: calc(100vw  - 1.6rem);
+    padding: 2.4rem 3.2rem 3.2rem;
+
+  }
+  .policy__close{
+    top:1.2rem;
+    right: 1.2rem;
+  }
+  .policy__head{
+    flex-direction: column;
+    padding: 0;
+    gap:1.6rem;
+    align-items: center;
+  }
+  .policy__head p{
+    line-height: 3.2rem;
+  }
+  .policy__text{
+    line-height: 2.4rem;
+    text-align: center;
+  }
+  .policy__button{
+    flex-direction: column;
+    & > *{
+      width: 100%;
+    }
+  }
+  .section__editor .container:before{
+    content: '';
+    position: absolute;
+    bottom: -1.7rem;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 37.6rem;
+    height: 13.2rem;
+    background: url(../img/pear-imp.svg) center / 37.6rem 13.2rem no-repeat;
+    z-index: 1;
   }
 }
