--- a/BACK/themes/Pear/styles/index.css
+++ b/BACK/themes/Pear/styles/index.css
@@ -2992,6 +2992,7 @@ label.error {
   }
   .section__top-search > * {
     width: 100%;
+    max-width: 100%;
   }
   .section__search-input {
     padding: 0;
@@ -3236,13 +3237,16 @@ label.error {
     font-size: 4.8rem;
     line-height: 4.8rem;
   }
-  .promise__count-wrap {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+  .promise__count-wrap{
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+  .promise__count-wrap > *{
+    max-width: calc(50% - 1.6rem);
   }
   .promise__count {
     width: 100%;
-    max-width: 15.1rem;
+    /*max-width: 15.1rem;*/
     gap: 0.4rem;
   }
   .place .card__block {
@@ -3449,6 +3453,9 @@ label.error {
   }
   .banner__campus .banner__info {
     gap: 1.6rem;
+  }
+  .banner__info{
+    max-width: 100%;
   }
   .banner__campus .section__title {
     margin: 0;
